--- a/style.css
+++ b/style.css
@@ -6,11 +6,11 @@
 
 body {
   background-color: hsl(219, 15%, 98%);
-  font-size: 15px;
+  font-size: 0.9375rem;
   font-family: "Outfit", sans-serif;
   display: flex;
   align-items: center;
-  max-width: 1440px;
+  max-width: 90rem;
   min-height: 100vh;
   margin-inline: auto;
 }
@@ -27,39 +27,51 @@ body {
 
 .qr-code {
   background-color: #fff;
-  border-radius: 20px;
+  border-radius: 1.25rem;
   display: flex;
   flex-direction: column;
-  max-width: 300px;
+  max-width: 18.75rem;
   padding: 0.65rem;
 }
 
 .qr-code__img {
-  border-radius: 20px;
+  border-radius: 1.25rem;
   padding-bottom: 5%;
   width: 100%;
 }
 
 .qr-code__text-area {
-  padding-inline: 6px;
+  padding-inline: 0.375rem;
   text-align: center;
 }
 .qr-code__heading {
   font-weight: 700;
-  padding-bottom: 15px;
+  padding-bottom: 1rem;
 }
 
 .qr-code__text {
   font-weight: 400;
   color: hsl(210, 10%, 69%);
-  padding-bottom: 10px;
+  padding-bottom: 1rem;
 }
 
 .attribution {
-  font-size: 11px;
+  font-size: 0.7rem;
   position: absolute;
   bottom: 0;
 }
 .attribution a {
   color: hsl(228, 45%, 44%);
+}
+
+@media screen and (max-width: 23rem) {
+  .qr-code {
+    max-width: 12rem;
+  }
+  .qr-code__heading {
+    font-size: 1rem;
+  }
+  .qr-code__text {
+    font-size: 1rem;
+  }
 }
